experiments with hiera

--- a/templates/my.cnf.erb
+++ b/templates/my.cnf.erb
@@ -1,10 +1,11 @@
 [client]
-port=<%= scope.lookupvar "mysql::config::port" %>
-socket=<%= scope.lookupvar "mysql::config::socket" %>
+port=<%= @port %>
+socket=<%= @socket %>
 
 [server]
-datadir=<%= scope.lookupvar "mysql::config::datadir" %>
-log-error=<%= scope.lookupvar "mysql::config::logerror" %>
-port=<%= scope.lookupvar "mysql::config::port" %>
-socket=<%= scope.lookupvar "mysql::config::socket" %>
+bind-address=<%= @bind_address %>
+datadir=<%= @datadir %>
+log-error=<%= @logerror %>
+port=<%= @port %>
+socket=<%= @socket %>
 max_allowed_packet=1073741824
