--- a/templates/dev.mysql.plist.erb
+++ b/templates/dev.mysql.plist.erb
@@ -11,16 +11,16 @@
       <string>A pretty okay relational database.</string>
 
       <key>Port</key>
-      <integer><%= scope.lookupvar "mysql::port" %></integer>
+      <integer><%= @port %></integer>
 
       <key>Socket</key>
-      <string><%= scope.lookupvar "mysql::socket" %></string>
+      <string><%= @socket %></string>
     </dict>
 
     <key>ProgramArguments</key>
     <array>
-      <string><%= scope.lookupvar "mysql::mysqld_safe" %></string>
-      <string>--defaults-file=<%= scope.lookupvar "mysql::configfile" %></string>
+      <string><%= @mysqld_safe %></string>
+      <string>--defaults-file=<%= @configfile %></string>
     </array>
 
     <key>RunAtLoad</key>
@@ -36,12 +36,12 @@
     <string><%= scope.lookupvar "::boxen_user" %></string>
 
     <key>WorkingDirectory</key>
-    <string><%= scope.lookupvar "mysql::datadir" %></string>
+    <string><%= @datadir %></string>
 
     <key>StandardErrorPath</key>
-    <string><%= scope.lookupvar "mysql::logdir" %>/console.log</string>
+    <string><%= @logdir %>/console.log</string>
 
     <key>StandardOutPath</key>
-    <string><%= scope.lookupvar "mysql::logdir" %>/console.log</string>
+    <string><%= @logdir %>/console.log</string>
   </dict>
 </plist>
